@@ -1,0 +1,9 @@
+Title: cmk --list-tag can now also list offline hosts
+Level: 1
+Component: core
+Compatible: compat
+Version: 1.4.0i1
+Date: 1473676104
+Class: feature
+
+
