@@ -6,6 +6,7 @@
     * 3580 The macro $HOSTNAME$ is now available for host checks which are based on service states
     * 3155 implemented dual monitoring for systems with management boards (like HP iLO)
     * 3721 Host macros are now replaced in datasource program command lines...
+    * 3853 cmk --list-tag can now also list offline hosts
     * 3193 FIX: Fixed fake check results for hosts...
     * 3214 FIX: Removing SNMP checks for non SNMP hosts and agent based checks for non agent hosts...
     * 3220 FIX: Check_MK HW/SW Inventory is now always disabled for "No Agent" hosts
